# knights-dinner

./: .gitignore  .gitignore_add.sh  Makefile.am  autogen.sh  configure.ac
.gear/: rules
include/: Configuration.h  gtk_macros.h  plugins.h
lib/: Makefile.am
lib/Various/: Configuration.cc  Makefile.am
src/: Makefile.am
src/Algorithms/: Makefile.am
src/Algorithms/Dinner/: Dinner.cc  Dinner.h  Makefile.am
src/Algorithms/HungrySimpleDinner/: HungrySimpleDinner.cc  HungrySimpleDinner.h  Makefile.am  hungry_dinner.cc
src/Algorithms/PriorityDinner/: Makefile.am  PriorityDinner.cc  PriorityDinner.h  priority_dinner.cc
src/Algorithms/SimpleDinner/: Makefile.am  SimpleDinner.cc  SimpleDinner.h  simple_dinner.cc
src/Algorithms/SmartDinner/: Makefile.am  SmartDinner.cc  SmartDinner.h  smart_dinner.cc
src/GUI/: Makefile.am  gtkrc  gui.cc  gui.glade  start_fg.sh  start_glade.sh
src/GUI/lib/: JournalInterface.cc  JournalInterface.h  MainWindow.cc  MainWindow.h  Makefile.am  StatisticInterface.cc  StatisticInterface.h  TableInterface.cc  TableInterface.h
src/GUI/widgets/: Journal.cc  Journal.h  Makefile.am  RoundTable.cc  RoundTable.h  Statistic.cc  Statistic.h  TreeView.cc  TreeView.h  function-knights.cc  glade-knights.cc  knights.xml
src/Objects/: Makefile.am
src/Objects/Knife/: Knife.cc  Knife.h  Makefile.am  knife.cc
src/Objects/Knight/: HungryKnight.cc  HungryKnight.h  Knight.cc  Knight.h  KnightEatState.cc  KnightState.cc  KnightState.h  KnightTalkState.cc  KnightTransientState.cc  KnightWaitingState.cc  Makefile.am  knight.cc
src/Objects/Table/: Makefile.am  Place.cc  Place.h  Table.cc  Table.h  table.cc
